--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
         body {
             font-family: 'Noto Sans TC', sans-serif;
             background-color: #f8fafc;
-            /* scroll-behavior: smooth;  <-- 建議移除此行，完全交由 JS 控制捲動行為以避免與固定導覽列偏移計算衝突 */
         }
         .gradient-text {
             background: linear-gradient(to right, #2563eb, #0891b2);
@@ -32,7 +31,6 @@
             transform: translateY(-5px);
             box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.1), 0 8px 10px -6px rgba(0, 0, 0, 0.1);
         }
-        /* Custom scrollbar for gallery */
         .gallery-scroll::-webkit-scrollbar {
             height: 8px;
         }
@@ -58,7 +56,6 @@
                     <a href="#experiments" class="text-gray-600 hover:text-blue-600 px-3 py-2 rounded-md text-sm font-medium">實驗與推導</a>
                     <a href="#lectures" class="text-gray-600 hover:text-blue-600 px-3 py-2 rounded-md text-sm font-medium">演講心得</a>
                 </div>
-                <!-- Mobile menu button -->
                 <div class="md:hidden flex items-center">
                     <button id="mobile-menu-btn" class="text-gray-600 hover:text-blue-600 focus:outline-none">
                         <i class="fa-solid fa-bars text-2xl"></i>
@@ -66,7 +63,6 @@
                 </div>
             </div>
         </div>
-        <!-- Mobile Menu -->
         <div class="md:hidden hidden bg-white border-t" id="mobile-menu">
             <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3">
                 <a href="#home" class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:bg-gray-50">首頁</a>
@@ -107,7 +103,6 @@
             </div>
 
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                
                 <!-- HW1 -->
                 <div class="bg-white rounded-xl overflow-hidden border border-gray-100 shadow-sm card-hover flex flex-col">
                     <div class="bg-blue-600 h-2"></div>
@@ -125,7 +120,6 @@
                         </a>
                     </div>
                 </div>
-
                 <!-- HW2 -->
                 <div class="bg-white rounded-xl overflow-hidden border border-gray-100 shadow-sm card-hover flex flex-col">
                     <div class="bg-orange-500 h-2"></div>
@@ -143,24 +137,20 @@
                         </a>
                     </div>
                 </div>
-
                 <!-- HW8 -->
                 <div class="bg-white rounded-xl overflow-hidden border border-gray-100 shadow-sm card-hover flex flex-col">
-<!-- 略過部分以節省篇幅 —
-```html
-<!-- 圖片部分 -->
-<div class="min-w-[250px] md:min-w-[300px] border rounded-lg overflow-hidden shadow-sm">
-    <img src="123/lab_setup.jpg" alt="實驗架設" class="w-full h-48 object-cover hover:scale-105 transition-transform"
-         onerror="this.onerror=null; this.parentElement.innerHTML='<div class=\'h-48 bg-gray-100 flex items-center justify-center text-gray-400 text-sm p-4 text-center\'>圖片 123/lab_setup.jpg 未找到</div>'">
-    <div class="p-2 bg-gray-50 text-center text-sm font-medium text-gray-600">實驗儀器架設</div>
-</div>
-<div class="min-w-[250px] md:min-w-[300px] border rounded-lg overflow-hidden shadow-sm">
-    <img src="123/lab_process.jpg" alt="實驗過程" class="w-full h-48 object-cover hover:scale-105 transition-transform"
-         onerror="this.onerror=null; this.parentElement.innerHTML='<div class=\'h-48 bg-gray-100 flex items-center justify-center text-gray-400 text-sm p-4 text-center\'>圖片 123/lab_process.jpg 未找到</div>'">
-    <div class="p-2 bg-gray-50 text-center text-sm font-medium text-gray-600">震源敲擊過程</div>
-</div>
-<div class="min-w-[250px] md:min-w-[300px] border rounded-lg overflow-hidden shadow-sm">
-    <img src="123/lab_data.jpg" alt="數據分析" class="w-full h-48 object-cover hover:scale-105 transition-transform"
-         onerror="this.onerror=null; this.parentElement.innerHTML='<div class=\'h-48 bg-gray-100 flex items-center justify-center text-gray-400 text-sm p-4 text-center\'>圖片 123/lab_data.jpg 未找到</div>'">
-    <div class="p-2 bg-gray-50 text-center text-sm font-medium text-gray-600">數據與走時曲線</div>
-</div>
+                    <div class="bg-green-500 h-2"></div>
+                    <div class="p-6 flex-1">
+                        <div class="flex items-center justify-between mb-4">
+                            <span class="bg-green-100 text-green-800 text-xs font-semibold px-2.5 py-0.5 rounded">作業 8</span>
+                            <i class="fa-solid fa-scale-balanced text-gray-400"></i>
+                        </div>
+                        <h3 class="text-xl font-bold mb-2">Free Air Anomaly 展示</h3>
+                        <p class="text-gray-600 text-sm mb-4">建立 Gradio 互動程式，動態展示自由空氣異常 (Free Air Anomaly) 的物理概念。</p>
+                    </div>
+                    <div class="p-6 pt-0 mt-auto">
+                        <a href="https://huggingface.co/spaces/u11310004/free_air_gravity" target="_blank" class="block w-full text-center bg-green-50 hover:bg-green-100 text-green-700 font-medium py-2 rounded-lg transition">
+                            體驗互動程式 <i class="fa-solid fa-arrow-up-right-from-square ml-1 text-xs"></i>
+                        </a>
+                    </div>
+                </div>
