--- a/index.html
+++ b/index.html
@@ -249,10 +249,10 @@
                     </p>
                     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                         <div class="bg-gray-50 p-2 rounded-lg border border-gray-200">
-                            <img src="123/image_ae690b.jpg" alt="公式推導過程 1" class="w-full h-auto rounded">
+                            <img src="123/image_note1.jpg" alt="公式推導過程 1" class="w-full h-auto rounded">
                         </div>
                         <div class="bg-gray-50 p-2 rounded-lg border border-gray-200">
-                            <img src="123/image_ae6948.jpg" alt="公式推導過程 2" class="w-full h-auto rounded">
+                            <img src="123/image_note2.jpg" alt="公式推導過程 2" class="w-full h-auto rounded">
                         </div>
                     </div>
                 </div>
